<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app0title"
    android:id="@+id/button0"
    android:layout_marginTop="20dp"
    android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app1title"
        android:id="@+id/button1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button0"
        android:layout_centerHorizontal="true" />
    <Button
        style="@style/roundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app2title"
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app3title"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app4title"
        android:id="@+id/button4"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app5title"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
